@@ -4248,7 +4248,7 @@ static const char *pstates[] = {
 
 /*@-modfilesys@*/
 if (_hdr_debug)
-fprintf(stderr, "-->     parseFormat(%p, \"%s\", %p, %p, %p, %s)\n", hsa, str, formatPtr, numTokensPtr, endPtr, pstates[(state & 0x3)]);
+fprintf(stderr, "-->     parseFormat(%p, \"%.20s...\", %p, %p, %p, %s)\n", hsa, str, formatPtr, numTokensPtr, endPtr, pstates[(state & 0x3)]);
 /*@=modfilesys@*/
 
     /* upper limit on number of individual formats */
@@ -4496,7 +4496,7 @@ fprintf(stderr, "\t<= %s %p[-1] = NUL\n", pstates[(state & 0x3)], start);
 
 /*@-modfilesys@*/
 if (_hdr_debug)
-fprintf(stderr, "\t*%p = *%p \"%s\"\n", dst, start, start);
+fprintf(stderr, "\t*%p = *%p \"%.30s\"\n", dst, start, start);
 /*@=modfilesys@*/
 	    if (start[0] == '\\' && start[1] != '\0') {
 		start++;
@@ -4507,6 +4507,7 @@ fprintf(stderr, "\t*%p = *%p \"%s\"\n", dst, start, start);
 	    }
 	    /*@switchbreak@*/ break;
 	}
+	if (dst < start) *dst = '\0';
 	if (done)
 	    break;
     }
@@ -4542,7 +4543,7 @@ static int parseExpression(headerSprintfArgs hsa, sprintfToken token,
 
 /*@-modfilesys@*/
 if (_hdr_debug)
-fprintf(stderr, "-->   parseExpression(%p, %p, \"%s\", %p)\n", hsa, token, str, endPtr);
+fprintf(stderr, "-->   parseExpression(%p, %p, \"%.20s...\", %p)\n", hsa, token, str, endPtr);
 /*@=modfilesys@*/
 
     hsa->errmsg = NULL;
